@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH TEXI2DVI "1" "March 2008" "texi2dvi 1.117" "User Commands"
+.TH TEXI2DVI "1" "March 2008" "texi2dvi 1.118" "User Commands"
 .SH NAME
 texi2dvi \- convert Texinfo documents to DVI
 .SH SYNOPSIS
